<resources>
    <string name="app_name" translatable="false">Bike speed meter</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_bike_header">Bike Settings</string>
    <string name="settings_app_header">App Settings</string>
    <string name="no_device_connected">Connect device</string>
    <string name="speed_unit_kmph">km/h</string>
    <string name="time">Time</string>
    <string name="distance">Distance</string>
    <string name="avg_speed">Avg. Speed</string>
    <string name="start">START</string>
    <string name="save">SAVE</string>
    <string name="settings">Settings</string>
    <string name="auto_connect">Auto connect on app startup</string>
    <string name="speed_unit">Speed unit</string>
    <string name="wheel_circumference">Wheel circumference</string>
    <string name="about">About</string>
    <string name="devices">Devices</string>
    <string name="activities">Activities</string>
    <string name="author">Made by Jakub Junkiert</string>
    <string name="app_description">Application for Mobile Applications course in Poznan University of Technology. \n\nApp connects via Bluetooth with Arduino with HC-06 module. Arduino acts as speedometer and counts wheel rotation time. This time is then sent to Android app to be processed.\n\nApplication displays actual speed, total time, distance and average speed. These activities can be saved to .tcx file which can be exported to social services, for example Strava or Garmin Connect.</string>
    <string name="no_activities_saved_yet">No activities saved yet!</string>
    <string name="file_saved">File saved!</string>
    <string name="no_storage_access">No access to external storage!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cannot_undo">This action cannot be undone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_all_activities">Delete all activities</string>
    <string name="delete_all_desc">Deletes all activities, this cannot be undone!</string>
    <string name="device_address">Device address</string>
    <string name="no_permission_bluetooth">No permission for bluetooth connectivity!</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected!</string>
    <string name="activity_not_saved_yet">Activity not saved yet!</string>
    <string name="activity_not_saved">Activity not saved!</string>
    <string name="activity_not_saved_desc">Activity not saved yet, are you sure you want to discard this and start a new one?</string>
    <string name="stop">STOP</string>
    <string name="no_devices_paired">No device paired yet, pair device first!</string>
    <string name="devices_desc">List of devices paired with your smartphone. Tap a device to select it as a connection destination. \nTap "+" to go to Bluetooth settings and pair a new device.</string>
    <string name="pair_a_new_device">Pair a new device</string>
    <string name="name_activity">Name activity</string>
    <string name="cancel">CANCEL</string>
    <string name="activity_with_that_name_already_exists">Activity with that name already exists!</string>
    <string name="device_selected">Device %1$s selected</string>
    <string name="speed_unit_mph">mph</string>
    <string name="update_interval">Update interval</string>
    <string name="device_disconnected">Device disconnected!</string>
    <string name="activity_removed">Activity removed</string>
    <string name="are_you_sure_you_want_to_delete_this_activity">Are you sure you want to delete this activity?</string>
</resources>
