<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_app_header">
        <SwitchPreferenceCompat
            app:key="auto_connect"
            app:title="@string/auto_connect" />
        <ListPreference
            app:key="speed_unit"
            app:title="@string/speed_unit"
            app:defaultValue="kmph"
            app:entries="@array/speed_unit_entries"
            app:entryValues="@array/speed_unit_values"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_bike_header" >

        <EditTextPreference
            app:defaultValue="2200"
            app:key="wheel_circ"
            app:title="@string/wheel_circumference"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>