<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.speedmeterproject.MainFragment"
        android:label="Speed Meter App"
        tools:layout="@layout/fragment_main" />
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.example.speedmeterproject.SettingsActivity"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.speedmeterproject.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/devicesFragment"
        android:name="com.example.speedmeterproject.DevicesFragment"
        android:label="@string/devices"
        tools:layout="@layout/fragment_devices" />
    <fragment
        android:id="@+id/activitiesFragment"
        android:name="com.example.speedmeterproject.ActivitiesFragment"
        android:label="@string/activities"
        tools:layout="@layout/fragment_activities" />
</navigation>