<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ConnectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_connected"
                    android:text="@string/no_device_connected" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/actualSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00,0"
                    android:textAlignment="center"
                    android:textSize="60sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_unit_kmph" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    tools:layout_weight="1"
                    tools:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tripTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00:00:00"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tripTimeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    tools:paddingRight="10dp">

                    <TextView
                        android:id="@+id/tripDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00,0"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/tripDistanceDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    tools:layout_weight="1"
                    tools:paddingRight="10dp">

                    <TextView
                        android:id="@+id/avgSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="00,00"
                        android:textAlignment="center"
                        android:textSize="25sp" />

                    <TextView
                        android:id="@+id/avgSpeedDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avg_speed"
                        android:textAlignment="center" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/start" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/save"
                android:visibility="invisible"
                tools:visibility="invisible" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/settings" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>
