<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devices_desc" />

            <TextView
                android:id="@+id/noDevicesPaired"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/no_devices_paired"
                android:textAlignment="center"
                android:paddingVertical="20dp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/pairButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/pair_a_new_device"
            android:layout_margin="16dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>