<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_activity"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_margin="30dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/activityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="?colorSecondary" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?colorSecondary"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
