<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        app:cardBackgroundColor="?colorPrimary"
        app:cardCornerRadius="20dp"
        android:layout_margin="10dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/activityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="My first long ride"
                android:textColor="?colorOnPrimary"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/activityDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="01.01.2021 21:37"
                android:textColorHighlight="?colorOnPrimary"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:layout_weight="1"
                    tools:paddingRight="10dp">

                    <TextView
                        android:id="@+id/activityTripTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="01:23:45"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="?colorOnPrimary"/>

                    <TextView
                        android:id="@+id/tripTimeDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/time"
                        android:textAlignment="center"
                        android:textColor="?colorOnPrimary"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    tools:paddingRight="10dp">

                    <TextView
                        android:id="@+id/activityTripDistance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="05,62"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="?colorOnPrimary"/>

                    <TextView
                        android:id="@+id/tripDistanceDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/distance"
                        android:textAlignment="center"
                        android:textColor="?colorOnPrimary"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    tools:layout_weight="1">

                    <TextView
                        android:id="@+id/activityAvgSpeed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="25,30"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="?colorOnPrimary"/>

                    <TextView
                        android:id="@+id/avgSpeedDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/avg_speed"
                        android:textAlignment="center"
                        android:textColor="?colorOnPrimary"/>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>